--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
-
 {
   "name": "portfolio_complete",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,5 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SanaUllah1696/portfoli.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SanaUllah1696/portfoli/issues"
+  },
+  "homepage": "https://github.com/SanaUllah1696/portfoli#readme",
+  "description": ""
 }
